# fuser-palette-builder

./: .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-linux.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.jsx  card.jsx
